fix: remove extra white space after iterable diffs
Because it looks too much when the diff is collapsed, and the vertical
gutters are enough to create separation.

--- a/packages/next/src/views/Version/RenderFieldsToDiff/fields/Iterable/index.scss
+++ b/packages/next/src/views/Version/RenderFieldsToDiff/fields/Iterable/index.scss
@@ -1,7 +1,5 @@
 @layer payload-default {
   .iterable-diff {
-    margin-bottom: calc(var(--base) * 2);
-
     &__locale-label {
       background: var(--theme-elevation-100);
       padding: calc(var(--base) * 0.25);
@@ -14,7 +12,8 @@
       }
     }
 
-    &__row:not(:first-child) {
+    // Space between each row
+    &__row:not(:first-of-type) {
       margin-top: calc(var(--base) * 0.5);
     }
 
